Fix display issues with create-nav bar on smallish screens

--- a/assets/styles/datawrapper/chart/base.less
+++ b/assets/styles/datawrapper/chart/base.less
@@ -47,15 +47,25 @@
     & > * {
         background: darken(@dw_lightgray, 2%);
         position: relative;
-        // box-shadow: 2px 2px 2px @dw_lightgray inset;
         border-radius: 4px 0 0 4px;
         text-align: left;
         height: 50px;
         font-size: 16px;
         line-height: 50px;
         font-weight: 400;
-        margin-bottom: 0;
+        margin-bottom: 5px;
         white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+
+        @media (min-width: 768px) and (max-width: 979px) {
+            font-size: 14px;
+            line-height: 42px;
+            height: 42px;
+            margin-bottom: 5px;
+            margin-right: -10px;
+            padding-right: 10px;
+        }
     }
 
     a > span {
@@ -128,9 +138,6 @@
 
     & > .readonly {
         color: #999;
-    }
-    & > a.passed {
-        // background: #ddd;
     }
 
     & > * .step {
