--- a/assets/styles/datawrapper/main.less
+++ b/assets/styles/datawrapper/main.less
@@ -323,12 +323,6 @@ dl.dl-horizontal dd {
         padding-left: 5px;
         white-space: nowrap;
     }
-
-    .dw .create-nav div {
-        font-size: 14px;
-        line-height: 42px;
-        height: 42px;
-    }
 }
 
 .tooltip {
