--- a/www/static/css/datawrapper.css
+++ b/www/static/css/datawrapper.css
@@ -2747,8 +2747,20 @@ input[type="color"],
   font-size: 16px;
   line-height: 50px;
   font-weight: 400;
-  margin-bottom: 0;
+  margin-bottom: 5px;
   white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+@media (min-width: 768px) and (max-width: 979px) {
+  .dw .create-nav > * {
+    font-size: 14px;
+    line-height: 42px;
+    height: 42px;
+    margin-bottom: 5px;
+    margin-right: -10px;
+    padding-right: 10px;
+  }
 }
 .dw .create-nav a > span {
   pointer-events: none;
@@ -3586,11 +3598,6 @@ dl.dl-horizontal dd {
     font-size: 11px;
     padding-left: 5px;
     white-space: nowrap;
-  }
-  .dw .create-nav div {
-    font-size: 14px;
-    line-height: 42px;
-    height: 42px;
   }
 }
 .tooltip {
